feat: network transfer almost implemented